bk_ida/gccida/g1/std_expand_builtin_va_arg
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/std_expand_builtin_va_arg/src/builtins.c:3458:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v5; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/std_expand_builtin_va_arg/src/builtins.c:3461:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v9; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/std_expand_builtin_va_arg/src/builtins.c:3463:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v11; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/std_expand_builtin_va_arg/src/builtins.c:3465:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/std_expand_builtin_va_arg/src/builtins.c:3475:19: error: expected expression
v5 = ( tree_node *)*( &global_trees + 15); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/std_expand_builtin_va_arg/src/builtins.c:3475:8: error: use of undeclared identifier 'tree_node'
v5 = ( tree_node *)*( &global_trees + 15); 
       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/std_expand_builtin_va_arg/src/builtins.c:3486:34: error: use of undeclared identifier 'machine_mode'
v6 = expand_expr( valist, 0LL, ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), EXPAND_NORMAL); 
                                 ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/std_expand_builtin_va_arg/src/obj/builtins.o] Error 1
